# opm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test-minimal-with-commit.yml  test-minimal.yml  test-with-oca-addons.yml
examples/: odoo13-project.ini  odoo18-minimal.ini  odoo18-project.ini  odoo18-python-version-override.ini  odoo18-requirements-override.ini  odoo18-vars.ini  odoo18-with-cetmix-tower.ini  odoo18-with-oca-helpdesk.ini  odoo19-minimal.ini  odoo19-project.ini  odoo19-with-mukit-modules.ini
examples/inheritance/: odoo18-base.ini  odoo18-dev.ini  odoo18-test.ini
odoo_devops_tools/: env.py
